syntax = "proto3";

package users;

service UsersService {
  // 토큰 검증 메서드
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {};
}

// ValidateToken 요청
message ValidateTokenRequest {
  string accessToken = 1;
}

// ValidateToken 응답
message ValidateTokenResponse {
  bool isValid = 1;
  Payload payload = 2; 
  string message = 3;
}

message Payload {
  int32 sub = 1;
  string username = 2;
}
